Fixed #10447 - Overlay aligning calculation defect

--- a/src/app/components/dropdown/dropdown.css
+++ b/src/app/components/dropdown/dropdown.css
@@ -43,6 +43,8 @@ input.p-dropdown-label  {
 
 .p-dropdown-panel {
     position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .p-dropdown-items-wrapper {
