--- a/src/app/components/multiselect/multiselect.css
+++ b/src/app/components/multiselect/multiselect.css
@@ -48,6 +48,8 @@
 
 .p-multiselect-panel {
     position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .p-multiselect-items-wrapper {
