--- a/src/app/components/overlaypanel/overlaypanel.css
+++ b/src/app/components/overlaypanel/overlaypanel.css
@@ -1,6 +1,8 @@
 .p-overlaypanel {
     position: absolute;
     margin-top: 10px;
+    top: 0;
+    left: 0;
 }
 
 .p-overlaypanel-flipped {
